Atualização de data e localização do evento. Adição do link para o Eventioz.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -68,8 +68,10 @@
 		<div class="row">
 		    <div class="blk">
 			<h1>Encontro em Computação Semântica</h1>
-			<p>Rio de Janeiro <br/>
-				Local a definir</p>
+			<p>Universidade Federal do Rio de Janeiro<br/>
+				Av. Athos da Silveira, 274<br/>	
+				Rio de Janeiro
+			</p>
 		    </div>
 		</div>
 		<div class="row">
@@ -112,7 +114,7 @@
 			<div class="icon fa fa-map-marker"></div>
 			<div class="info">
 			    <h3>Rio de Janeiro</h3>
-			    <span>Local a definir.</span>
+			    <span>UFRJ</span>
 			</div>
 		    </div>
 		</div>
@@ -120,7 +122,7 @@
 		    <div class="event-info">
 			<div class="icon fa fa-calendar"></div>
 			<div class="info">
-			    <h3>Março</h3>
+			    <h3>10 e 11 de Março</h3>
 			    <span>2015</span>
 			</div>
 		    </div>
@@ -138,7 +140,7 @@
 		    <div class="event-info">
 			<div class="icon fa fa-users"></div>
 			<div class="info">
-			    <h3>100 Lugares</h3>
+			    <h3>80 Lugares</h3>
 			    <span>Registre-se gratuitamente!</span>
 			</div>
 		    </div>
@@ -273,7 +275,7 @@
 		    <div class="speaker">
 			<div class="speaker-info">
 			    <div class="speaker-photo">
-				<img src="images/speakers/no_pic.gif" alt="Aline Paes">
+				<img src="images/speakers/no_pic_w.png" alt="Aline Paes">
 			    </div>								
 			    <div class="speaker-contacts">
 				<!--<a href="#" class="contact pull-left fa fa-linkedin"></a>-->
@@ -303,7 +305,7 @@
 		    <div class="speaker">
 			<div class="speaker-info">
 			    <div class="speaker-photo">
-				<img src="images/speakers/no_pic.gif" alt="Ana Maria Moura">
+				<img src="images/speakers/no_pic_w.png" alt="Ana Maria Moura">
 			    </div>
 			    <div class="speaker-contacts">
 				<!--<a href="#" class="contact pull-left fa fa-linkedin"></a>-->
@@ -349,7 +351,7 @@
 		    <div class="speaker">
 			<div class="speaker-info">
 			    <div class="speaker-photo">
-				<img src="images/speakers/no_pic.gif" alt="Karin Breitman">
+				<img src="images/speakers/no_pic_w.png" alt="Karin Breitman">
 			    </div>
 			    <div class="speaker-contacts">
 				<!--<a href="#" class="contact pull-left fa fa-linkedin"></a>-->
@@ -365,7 +367,7 @@
 		    <div class="speaker">
 			<div class="speaker-info">
 			    <div class="speaker-photo">
-				<img src="images/speakers/no_pic.gif" alt="Kate Revoredo">
+				<img src="images/speakers/no_pic_w.png" alt="Kate Revoredo">
 			    </div>
 			    <div class="speaker-contacts">
 				<!--<a href="#" class="contact pull-left fa fa-linkedin"></a>-->
@@ -380,7 +382,7 @@
 		    <div class="speaker">
 			<div class="speaker-info">
 			    <div class="speaker-photo">
-				<img src="images/speakers/no_pic.gif" alt="Maria Cláudia Cavalcante">
+				<img src="images/speakers/no_pic_w.png" alt="Maria Cláudia Cavalcante">
 			    </div>
 			    <div class="speaker-contacts">
 				<!--<a href="#" class="contact pull-left fa fa-linkedin"></a>-->
