Adicionando novos palestrantes e descrição do evento

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -131,7 +131,7 @@
 		    <div class="event-info">
 			<div class="icon fa fa-microphone"></div>
 			<div class="info">
-			    <h3>10 palestrantes</h3>
+			    <h3>13 palestrantes</h3>
 			    <span>Especialistas em Computação Semântica</span>
 			</div>
 		    </div>
@@ -140,7 +140,7 @@
 		    <div class="event-info">
 			<div class="icon fa fa-users"></div>
 			<div class="info">
-			    <h3>80 Lugares</h3>
+			    <h3>60 Lugares</h3>
 			    <span>Registre-se gratuitamente!</span>
 			</div>
 		    </div>
@@ -160,7 +160,10 @@
 		    </div>
 		</div>
 		<div class="col-sm-12">
-		    <p>O objetivo do encontro é promover a interação entre os principais atores no cenário de pesquisa e aplicação de Processamento de Linguagem Natural, Web Semântica e Computação Cognitiva no Rio de Janeiro, disseminando o trabalho de seus grupos de pesquisa e discutindo oportunidades de pesquisa e colaboração nestas áreas. </p>
+			<p>A computação semântica e cognitiva está emergindo como um campo com grande potencial de impacto socioeconômico. Este potencial se dá pela demanda crescente por soluções tecnológicas para a interpretação de dados heterogêneos e pouco estruturados que permitiam um processamento em grande escala.</p>
+			<p>Essa demanda impacta processos fundamentais nos processos de descoberta científica, no gerenciamento de informações pessoais e na tomada de decisões estratégicas em negócios.</p>
+			<p>Existem evidências crescentes da adoção de tecnologias semânticas pela indústria. Esta curva de adoção aponta para uma demanda de integração de tecnologias semânticas em infra-estruturas de tecnologia da informação (TI).</p>
+			<p>O objetivo do Primeiro encontro em Computação Semântica é discutir o papel de abordagens e tecnologias de computação semântica na solução de desafios contemporâneos em ciência da computação e suas aplicações, promovendo a interação entre os principais atores no cenário de pesquisa e aplicação de Processamento de Linguagem Natural, Web Semântica e Computação Cognitiva no Rio de Janeiro.</p>
 		</div>
 	    </section>
 	    <!--==========-->
@@ -268,7 +271,7 @@
 		<div class="col-sm-12">
 		    <div class="section-header text-center">
 			<h2>Palestrantes</h2>
-			<h4>Representantes de Grupos de Pesquisa e Empresas que confirmaram presença como palestrantes.</h4>
+			<h4>Membros da Academia e Indústria que confirmaram presença como palestrantes.</h4>
 		    </div>
 		</div>
 		<div class="col-md-4 col-sm-6">
@@ -336,6 +339,37 @@
 		    <div class="speaker">
 			<div class="speaker-info">
 			    <div class="speaker-photo">
+				<img src="images/speakers/no_pic.gif" alt="Daniel Schwabe">
+			    </div>
+			    <div class="speaker-contacts">
+				<!--<a href="#" class="contact pull-left fa fa-linkedin"></a>-->
+				<a href="https://www.linkedin.com/in/dschwabe" class="contact pull-right fa fa-linkedin"></a>
+			    </div>
+			</div>
+			<h3>Daniel Schwabe</h3>
+			<p>Pontifícia Universidade Católica (PUC-Rio)</p>
+		    </div>
+		</div>
+		<div class="col-md-4 col-sm-6">
+		    <div class="speaker">
+			<div class="speaker-info">
+			    <div class="speaker-photo">
+				<img src="images/speakers/no_pic_w.png" alt="Fernanda Baião">
+			    </div>
+			    <div class="speaker-contacts">
+				<!--<a href="#" class="contact pull-left fa fa-linkedin"></a>-->
+				<!--<a href="#" class="contact pull-right fa fa-linkedin"></a>-->
+			    </div>
+			</div>
+			<h3>Fernanda Baião</h3>
+			<p>Universidade Federal do Estado do Rio de Janeiro (UniRIO)</p>
+		    </div>
+		</div>
+		<div>&nbsp;</div>
+		<div class="col-md-4 col-sm-6">
+		    <div class="speaker">
+			<div class="speaker-info">
+			    <div class="speaker-photo">
 				<img src="images/speakers/no_pic.gif" alt="Ícaro">
 			    </div>
 			    <div class="speaker-contacts">
@@ -362,9 +396,8 @@
 			<p>EMC</p>
 		    </div>
 		</div>
-		<div>&nbsp;</div>
 		<div class="col-md-4 col-sm-6">
-		    <div class="speaker">
+		     <div class="speaker">
 			<div class="speaker-info">
 			    <div class="speaker-photo">
 				<img src="images/speakers/no_pic_w.png" alt="Kate Revoredo">
@@ -376,6 +409,22 @@
 			</div>
 			<h3>Kate Revoredo</h3>
 			<p>Universidade Federal do Estado do Rio de Janeiro (UniRIO)</p>
+			</div>
+		</div>
+		<div>&nbsp;</div>
+		<div class="col-md-4 col-sm-6">
+		    <div class="speaker">
+			<div class="speaker-info">
+			    <div class="speaker-photo">
+				<img src="images/speakers/no_pic.gif" alt="Marco Casanova">
+			    </div>
+			    <div class="speaker-contacts">
+				<!--<a href="#" class="contact pull-left fa fa-linkedin"></a>-->
+				<a href="https://www.linkedin.com/in/marcoantoniocasanova" class="contact pull-right fa fa-linkedin"></a>
+			    </div>
+			</div>
+			<h3>Marco Casanova</h3>
+			<p>Pontifícia Universidade Católica (PUC-Rio)</p>
 		    </div>
 		</div>
 		<div class="col-md-4 col-sm-6">
@@ -397,6 +446,22 @@
 		    <div class="speaker">
 			<div class="speaker-info">
 			    <div class="speaker-photo">
+				<img src="images/speakers/no_pic.gif" alt="Renato Rocha Souza">
+			    </div>
+			    <div class="speaker-contacts">
+				<!--<a href="#" class="contact pull-left fa fa-linkedin"></a>-->
+				<a href="https://www.linkedin.com/profile/view?id=357907" class="contact pull-right fa fa-linkedin"></a>
+			    </div>
+			</div>
+			<h3>Renato Rocha Souza</h3>
+			<p>Fundação Getúlio Vargas (FGV)</p>
+		    </div>
+		</div>
+		<div>&nbsp;</div>
+		<div class="col-md-4 col-sm-6">
+		    <div class="speaker">
+			<div class="speaker-info">
+			    <div class="speaker-photo">
 				<img src="images/speakers/no_pic.gif" alt="Sérgio Serra">
 			    </div>
 			    <div class="speaker-contacts">
@@ -407,6 +472,38 @@
 			<h3>Sérgio Serra</h3>
 			<p>Universidade Federal Rural do Rio de Janeiro (UFFRJ)</p>
 		    </div>
+		</div>
+		<div class="col-md-4 col-sm-6">
+			&nbsp;
+		   <!-- <div class="speaker">
+			<div class="speaker-info">
+			    <div class="speaker-photo">
+				<img src="images/speakers/no_pic_w.png" alt="Maria Cláudia Cavalcante">
+			    </div>
+			    <div class="speaker-contacts">
+				<a href="#" class="contact pull-left fa fa-linkedin"></a>
+				<a href="https://www.linkedin.com/pub/maria-claudia-cavalcanti/4/191/662" class="contact pull-right fa fa-linkedin"></a>
+			    </div>
+			</div>
+			<h3>Maria Cláudia Cavalcante</h3>
+			<p>Instituto Militar de Engenharia (IME)</p>
+		    </div >-->
+		</div>
+		<div class="col-md-4 col-sm-6">
+			&nbsp;
+		    <!--<div class="speaker">
+			<div class="speaker-info">
+			    <div class="speaker-photo">
+				<img src="images/speakers/no_pic.gif" alt="Sérgio Serra">
+			    </div>
+			    <div class="speaker-contacts">
+				<a href="#" class="contact pull-left fa fa-linkedin"></a>
+				<a href="http://br.linkedin.com/pub/sergio-serra/6/608/7a1" class="contact pull-right fa fa-linkedin"></a>
+			    </div>
+			</div>
+			<h3>Sérgio Serra</h3>
+			<p>Universidade Federal Rural do Rio de Janeiro (UFFRJ)</p>
+		    </div>-->
 		</div>
 	    </section>
 	    <!--==========-->
@@ -492,7 +589,7 @@
 			    </div>
 			</div>
 			<h3>André Freitas</h3>
-			<p>Insight @ NUIG</p>
+			<p>Insight Centre for Data Analytics @ NUIG</p>
 		    </div>
 		</div>
 		<div class="col-md-4 col-sm-6">
@@ -507,7 +604,7 @@
 			    </div>
 			</div>
 			<h3>Bianca Pereira</h3>
-			<p>Insight @ NUIG</p>
+			<p>Insight Centre for Data Analytics @ NUIG</p>
 		    </div>
 		</div>
 		<div class="col-md-4 col-sm-6">
@@ -540,8 +637,8 @@
 		    </div>
 		</div>
 		<div class="col-sm-12">
-		    <div class="col-sm-4"><img src="images/partners/sfi.png" alt="Science Foundation Ireland"></div>
-		    <div class="col-sm-4"><img src="images/partners/amtera-logo.png" alt="Amtera"></div>
+		    <div class="col-sm-6"><a href="http://www.sfi.ie"><img src="images/partners/sfi.png" alt="Science Foundation Ireland"></a></div>
+		    <div class="col-sm-6"><img src="images/partners/amtera-logo.png" alt="Amtera"></div>
 		</div>
 	    </section>
 	    <!--==========-->
@@ -558,10 +655,10 @@
 		    </div>
 		</div>
 		<div class="col-sm-12">
-		    <div class="col-sm-4"><img src="images/partners/rbi-logo.png" alt="Research Brazil Ireland"></div>
-		    <div class="col-sm-4"><img src="images/partners/ufrj_logo.jpg" alt="Universidade Federal do Rio de Janeiro"></div>
-		    <div class="col-sm-4"></div>
-		    <div class="col-sm-4"></div>
+		    <div class="col-sm-3"><a href="http://rbi.ie"><img src="images/partners/rbi-logo.png" alt="Research Brazil Ireland"></a></div>
+		    <div class="col-sm-3"><a href="http://insight-centre.org"><img src="images/partners/insight_logo.jpg" alt="Insight Centre for Data Analytics"></a></div>
+		    <div class="col-sm-3"><a href="http://ufrj.br"><img src="images/partners/ufrj_logo.jpg" alt="Universidade Federal do Rio de Janeiro"></a></div>
+		    <div class="col-sm-3"><a href="http://www.dcc.ufrj.br"><img src="images/partners/dcc-ufrj-logo.png" alt="Departamento de Ciência da Computação - UFRJ"></a></div>
 		</div>
 	    </section>
 	    <!--==========-->
