Including speaker pictures and changing tutorial name

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -206,11 +206,11 @@
 				    <li class="accordion">
 					<a class="accordion-heading">
 					    <time>17:00</time>
-					    <h4 class="accordion-title">Tutorial em Recuperação de Informação</h4>
+					    <h4 class="accordion-title">Tutorial em Question Answering</h4>
 					    <span class="fa fa-plus-circle pull-right"></span>
 					</a>
 					<div class="accordion-body" style="display: none;">
-					    O tutorial em Recuperação de Informação é voltado para iniciantes. Mais informações em breve.
+					    O tutorial em Question Answering é voltado para iniciantes. Mais informações em breve.
 					</div>
 				    </li>
 				</ul>
@@ -370,7 +370,7 @@
 		    <div class="speaker">
 			<div class="speaker-info">
 			    <div class="speaker-photo">
-				<img src="images/speakers/no_pic.gif" alt="Ícaro">
+				<img src="images/speakers/icaro.png" alt="Ícaro">
 			    </div>
 			    <div class="speaker-contacts">
 				<!--<a href="#" class="contact pull-left fa fa-linkedin"></a>-->
@@ -385,7 +385,7 @@
 		    <div class="speaker">
 			<div class="speaker-info">
 			    <div class="speaker-photo">
-				<img src="images/speakers/no_pic_w.png" alt="Karin Breitman">
+				<img src="images/speakers/karin.jpg" alt="Karin Breitman">
 			    </div>
 			    <div class="speaker-contacts">
 				<!--<a href="#" class="contact pull-left fa fa-linkedin"></a>-->
@@ -462,7 +462,7 @@
 		    <div class="speaker">
 			<div class="speaker-info">
 			    <div class="speaker-photo">
-				<img src="images/speakers/no_pic.gif" alt="Sérgio Serra">
+				<img src="images/speakers/sergio.jpeg" alt="Sérgio Serra">
 			    </div>
 			    <div class="speaker-contacts">
 				<!--<a href="#" class="contact pull-left fa fa-linkedin"></a>-->
