Inclusion of Lattes

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -388,7 +388,7 @@
 				<img src="images/speakers/karin.jpg" alt="Karin Breitman">
 			    </div>
 			    <div class="speaker-contacts">
-				<!--<a href="#" class="contact pull-left fa fa-linkedin"></a>-->
+				<a href="http://lattes.cnpq.br/5297074319265251" class="contact pull-left fa fa-university"></a>
 				<a href="http://br.linkedin.com/pub/karin-breitman/0/697/602?domainCountryName=Brazil&csrfToken=guest_token&domainCountryCode=br" class="contact pull-right fa fa-linkedin"></a>
 			    </div>
 			</div>
@@ -465,7 +465,7 @@
 				<img src="images/speakers/sergio.jpeg" alt="Sérgio Serra">
 			    </div>
 			    <div class="speaker-contacts">
-				<!--<a href="#" class="contact pull-left fa fa-linkedin"></a>-->
+				<a href="http://lattes.cnpq.br/7618571401128973" class="contact pull-left fa fa-university"></a>
 				<a href="http://br.linkedin.com/pub/sergio-serra/6/608/7a1" class="contact pull-right fa fa-linkedin"></a>
 			    </div>
 			</div>
