Inclusão dos dados do Cícero e do Christian

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -324,11 +324,26 @@
 		    <div class="speaker">
 			<div class="speaker-info">
 			    <div class="speaker-photo">
-				<img src="images/speakers/no_pic.gif" alt="Christian Aranha">
+				<img src="images/speakers/cicero.jpg" alt="Cícero Nogueira dos Santos">
 			    </div>
 			    <div class="speaker-contacts">
-				<!--<a href="#" class="contact pull-left fa fa-linkedin"></a>-->
+				<a href="http://researcher.watson.ibm.com/researcher/view_person_pubs.php?person=br-cicerons&t=1" class="contact pull-left fa fa-university"></a>
 				<!--<a href="#" class="contact pull-right fa fa-linkedin"></a>-->
+			    </div>
+			</div>
+			<h3>Cícero Nogueira dos Santos</h3>
+			<p>IBM Watson</p>
+		    </div>
+		</div>
+		<div class="col-md-4 col-sm-6">
+		    <div class="speaker">
+			<div class="speaker-info">
+			    <div class="speaker-photo">
+				<img src="images/speakers/christian.jpg" alt="Christian Aranha">
+			    </div>
+			    <div class="speaker-contacts">
+				<!--<a href="#" class="contact pull-left fa fa-university"></a>-->
+				<a href="https://www.linkedin.com/in/cnaranha" class="contact pull-right fa fa-linkedin"></a>
 			    </div>
 			</div>
 			<h3>Christian Aranha</h3>
@@ -350,6 +365,8 @@
 			<p>Pontifícia Universidade Católica (PUC-Rio)</p>
 		    </div>
 		</div>
+		
+		<div>&nbsp;</div>
 		<div class="col-md-4 col-sm-6">
 		    <div class="speaker">
 			<div class="speaker-info">
@@ -365,7 +382,6 @@
 			<p>Universidade Federal do Estado do Rio de Janeiro (UniRIO)</p>
 		    </div>
 		</div>
-		<div>&nbsp;</div>
 		<div class="col-md-4 col-sm-6">
 		    <div class="speaker">
 			<div class="speaker-info">
@@ -396,6 +412,7 @@
 			<p>EMC</p>
 		    </div>
 		</div>
+		<div>&nbsp;</div>
 		<div class="col-md-4 col-sm-6">
 		     <div class="speaker">
 			<div class="speaker-info">
@@ -411,7 +428,6 @@
 			<p>Universidade Federal do Estado do Rio de Janeiro (UniRIO)</p>
 			</div>
 		</div>
-		<div>&nbsp;</div>
 		<div class="col-md-4 col-sm-6">
 		    <div class="speaker">
 			<div class="speaker-info">
@@ -442,6 +458,7 @@
 			<p>Instituto Militar de Engenharia (IME)</p>
 		    </div>
 		</div>
+		<div>&nbsp;</div>
 		<div class="col-md-4 col-sm-6">
 		    <div class="speaker">
 			<div class="speaker-info">
@@ -457,7 +474,6 @@
 			<p>Fundação Getúlio Vargas (FGV)</p>
 		    </div>
 		</div>
-		<div>&nbsp;</div>
 		<div class="col-md-4 col-sm-6">
 		    <div class="speaker">
 			<div class="speaker-info">
