Inclusão dos títulos das palestras de Ícaro e Karin

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -224,7 +224,9 @@
 					    <span class="fa fa-plus-circle pull-right"></span>
 					</a>
 					<div class="accordion-body" style="display: none;">
-					    Esta seção visa a apresentação do trabalho sendo conduzido por diversos grupos de pesquisa na área de Computação Semântica no Rio de Janeiro. Seu objetivo é facilitar a busca por pontos de conexão para futuras colaborações na área.
+					    Esta seção visa a apresentação do trabalho sendo conduzido por diversos grupos de pesquisa na área de Computação Semântica no Rio de Janeiro. Seu objetivo é facilitar a busca por pontos de conexão para futuras colaborações na área.<br/><br/>
+					    <b>Ícaro Medeiros:</b> Linked Data, Big data and User Science @ globo.com<br/>
+					    <b>Karin Breitman:</b> Linked Data para Dados Abertos.
 					</div>
 				    </li>
 				    <li class="accordion">
