--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -334,7 +334,7 @@
 			    </div>
 			</div>
 			<h3>Cícero Nogueira dos Santos</h3>
-			<p>IBM Watson</p>
+			<p>IBM Research</p>
 		    </div>
 		</div>
 		<div class="col-md-4 col-sm-6">
