--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -131,7 +131,7 @@
 		    <div class="event-info">
 			<div class="icon fa fa-microphone"></div>
 			<div class="info">
-			    <h3>14 palestrantes</h3>
+			    <h3>15 palestrantes</h3>
 			    <span>Especialistas em Computação Semântica</span>
 			</div>
 		    </div>
@@ -326,6 +326,36 @@
 		    <div class="speaker">
 			<div class="speaker-info">
 			    <div class="speaker-photo">
+				<img src="images/speakers/andre_freitas.jpg" alt="André Freitas">
+			    </div>
+			    <div class="speaker-contacts">
+				<!--<a href="#" class="contact pull-left fa fa-linkedin"></a>-->
+				<a href="https://ie.linkedin.com/in/andrefreitas" class="contact pull-right fa fa-linkedin"></a>
+			    </div>
+			</div>
+			<h3>André Freitas</h3>
+			<p>Insight Centre for Data Analytics @ NUIG</p>
+		    </div>
+		</div>
+		<div class="col-md-4 col-sm-6">
+		    <div class="speaker">
+			<div class="speaker-info">
+			    <div class="speaker-photo">
+				<img src="images/speakers/bianca_pereira.jpg" alt="Bianca Pereira">
+			    </div>
+			    <div class="speaker-contacts">
+				<!--<a href="#" class="contact pull-left fa fa-linkedin"></a>-->
+				<a href="https://www.linkedin.com/in/biancaolipereira" class="contact pull-right fa fa-linkedin"></a>
+			    </div>
+			</div>
+			<h3>Bianca Pereira</h3>
+			<p>Insight Centre for Data Analytics @ NUIG</p>
+		    </div>
+		</div>
+		<div class="col-md-4 col-sm-6">
+		    <div class="speaker">
+			<div class="speaker-info">
+			    <div class="speaker-photo">
 				<img src="images/speakers/cicero.jpg" alt="Cícero Nogueira dos Santos">
 			    </div>
 			    <div class="speaker-contacts">
@@ -337,6 +367,7 @@
 			<p>IBM Research</p>
 		    </div>
 		</div>
+		<div>&nbsp;</div>
 		<div class="col-md-4 col-sm-6">
 		    <div class="speaker">
 			<div class="speaker-info">
@@ -367,23 +398,6 @@
 			<p>Pontifícia Universidade Católica (PUC-Rio)</p>
 		    </div>
 		</div>
-		
-		<div>&nbsp;</div>
-		<div class="col-md-4 col-sm-6">
-		    <div class="speaker">
-			<div class="speaker-info">
-			    <div class="speaker-photo">
-				<img src="images/speakers/no_pic_w.png" alt="Fernanda Baião">
-			    </div>
-			    <div class="speaker-contacts">
-				<!--<a href="#" class="contact pull-left fa fa-linkedin"></a>-->
-				<!--<a href="#" class="contact pull-right fa fa-linkedin"></a>-->
-			    </div>
-			</div>
-			<h3>Fernanda Baião</h3>
-			<p>Universidade Federal do Estado do Rio de Janeiro (UniRIO)</p>
-		    </div>
-		</div>
 		<div class="col-md-4 col-sm-6">
 		    <div class="speaker">
 			<div class="speaker-info">
@@ -399,6 +413,7 @@
 			<p>Globo.com</p>
 		    </div>
 		</div>
+		<div>&nbsp;</div>
 		<div class="col-md-4 col-sm-6">
 		    <div class="speaker">
 			<div class="speaker-info">
@@ -414,7 +429,6 @@
 			<p>EMC</p>
 		    </div>
 		</div>
-		<div>&nbsp;</div>
 		<div class="col-md-4 col-sm-6">
 		     <div class="speaker">
 			<div class="speaker-info">
@@ -445,6 +459,7 @@
 			<p>Pontifícia Universidade Católica (PUC-Rio)</p>
 		    </div>
 		</div>
+		<div>&nbsp;</div>
 		<div class="col-md-4 col-sm-6">
 		    <div class="speaker">
 			<div class="speaker-info">
@@ -460,7 +475,6 @@
 			<p>Instituto Militar de Engenharia (IME)</p>
 		    </div>
 		</div>
-		<div>&nbsp;</div>
 		<div class="col-md-4 col-sm-6">
 		    <div class="speaker">
 			<div class="speaker-info">
@@ -490,38 +504,6 @@
 			<h3>Sérgio Serra</h3>
 			<p>Universidade Federal Rural do Rio de Janeiro (UFFRJ)</p>
 		    </div>
-		</div>
-		<div class="col-md-4 col-sm-6">
-			&nbsp;
-		   <!-- <div class="speaker">
-			<div class="speaker-info">
-			    <div class="speaker-photo">
-				<img src="images/speakers/no_pic_w.png" alt="Maria Cláudia Cavalcante">
-			    </div>
-			    <div class="speaker-contacts">
-				<a href="#" class="contact pull-left fa fa-linkedin"></a>
-				<a href="https://www.linkedin.com/pub/maria-claudia-cavalcanti/4/191/662" class="contact pull-right fa fa-linkedin"></a>
-			    </div>
-			</div>
-			<h3>Maria Cláudia Cavalcante</h3>
-			<p>Instituto Militar de Engenharia (IME)</p>
-		    </div >-->
-		</div>
-		<div class="col-md-4 col-sm-6">
-			&nbsp;
-		    <!--<div class="speaker">
-			<div class="speaker-info">
-			    <div class="speaker-photo">
-				<img src="images/speakers/no_pic.gif" alt="Sérgio Serra">
-			    </div>
-			    <div class="speaker-contacts">
-				<a href="#" class="contact pull-left fa fa-linkedin"></a>
-				<a href="http://br.linkedin.com/pub/sergio-serra/6/608/7a1" class="contact pull-right fa fa-linkedin"></a>
-			    </div>
-			</div>
-			<h3>Sérgio Serra</h3>
-			<p>Universidade Federal Rural do Rio de Janeiro (UFFRJ)</p>
-		    </div>-->
 		</div>
 	    </section>
 	    <!--==========-->
