Inclusão do Local e das Informações de Alexandre Rademaker

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -69,6 +69,7 @@
 		    <div class="blk">
 			<h1>Encontro em Computação Semântica</h1>
 			<p>Universidade Federal do Rio de Janeiro<br/>
+				Auditório do IGEO, CCMN<br/>
 				Av. Athos da Silveira, 274<br/>	
 				Rio de Janeiro
 			</p>
@@ -114,7 +115,7 @@
 			<div class="icon fa fa-map-marker"></div>
 			<div class="info">
 			    <h3>Rio de Janeiro</h3>
-			    <span>UFRJ</span>
+			    <span>IGEO, CCMN, UFRJ</span>
 			</div>
 		    </div>
 		</div>
@@ -140,7 +141,7 @@
 		    <div class="event-info">
 			<div class="icon fa fa-users"></div>
 			<div class="info">
-			    <h3>80 Lugares</h3>
+			    <h3>110 Lugares</h3>
 			    <span>Registre-se gratuitamente!</span>
 			</div>
 		    </div>
@@ -295,15 +296,15 @@
 		    <div class="speaker">
 			<div class="speaker-info">
 			    <div class="speaker-photo">
-				<img src="images/speakers/no_pic.gif" alt="Alexandre Rademaker">
+				<img src="images/speakers/alexandre.jpg" alt="Alexandre Rademaker">
 			    </div>
 			    <div class="speaker-contacts">
-				<!--<a href="#" class="contact pull-left fa fa-linkedin"></a>-->
+				<a href="http://emap.fgv.br/people/alexandre.rademaker.html" class="contact pull-left fa fa-university"></a>
 				<a href="http://br.linkedin.com/pub/alexandre-rademaker/8/a7/73a" class="contact pull-right fa fa-linkedin"></a>
 			    </div>
 			</div>
 			<h3>Alexandre Rademaker</h3>
-			<p>Fundação Getúlio Vargas (FGV)</p>
+			<p>FGV/EMAp e IBM Research</p>
 		    </div>
 		</div>
 		<div class="col-md-4 col-sm-6">
