Inclusão das informações do Daniel Schwabe

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -226,6 +226,7 @@
 					</a>
 					<div class="accordion-body" style="display: none;">
 					    Esta seção visa a apresentação do trabalho sendo conduzido por diversos grupos de pesquisa na área de Computação Semântica no Rio de Janeiro. Seu objetivo é facilitar a busca por pontos de conexão para futuras colaborações na área.<br/><br/>
+					    <b>Daniel Schwabe:</b> Desenvolvimento de Sistemas Socio-Técnicos Dirigido por Modelos Semânticos<br/>
 					    <b>Ícaro Medeiros:</b> Linked Data, Big data and User Science @ globo.com<br/>
 					    <b>Karin Breitman:</b> Linked Data para Dados Abertos.
 					</div>
@@ -388,10 +389,10 @@
 		    <div class="speaker">
 			<div class="speaker-info">
 			    <div class="speaker-photo">
-				<img src="images/speakers/no_pic.gif" alt="Daniel Schwabe">
+				<img src="images/speakers/daniel.jpg" alt="Daniel Schwabe">
 			    </div>
 			    <div class="speaker-contacts">
-				<!--<a href="#" class="contact pull-left fa fa-linkedin"></a>-->
+				<a href="http://buscatextual.cnpq.br/buscatextual/visualizacv.do?id=K4787027P5" class="contact pull-left fa fa-university"></a>-->
 				<a href="https://www.linkedin.com/in/dschwabe" class="contact pull-right fa fa-linkedin"></a>
 			    </div>
 			</div>
