Inclusão de título de palestras e foto de Aline Paes

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -226,9 +226,12 @@
 					</a>
 					<div class="accordion-body" style="display: none;">
 					    Esta seção visa a apresentação do trabalho sendo conduzido por diversos grupos de pesquisa na área de Computação Semântica no Rio de Janeiro. Seu objetivo é facilitar a busca por pontos de conexão para futuras colaborações na área.<br/><br/>
-					    <b>Daniel Schwabe:</b> Desenvolvimento de Sistemas Socio-Técnicos Dirigido por Modelos Semânticos<br/>
-					    <b>Ícaro Medeiros:</b> Linked Data, Big data and User Science @ globo.com<br/>
-					    <b>Karin Breitman:</b> Linked Data para Dados Abertos.
+					    <b>Aline Paes: </b> Aprendizado de Modelos Semânticos Expressivos com Programação por Conjuntos de Resposta.<br/>
+					    <b>Christian Aranha:</b> Aprendizado Adaptativo de Estruturas Semânticas.<br/>
+					    <b>Daniel Schwabe:</b> Desenvolvimento de Sistemas Socio-Técnicos Dirigido por Modelos Semânticos.<br/>
+					    <b>Ícaro Medeiros:</b> Linked Data, Big data and User Science @ globo.com.<br/>
+					    <b>Karin Breitman:</b> Linked Data para Dados Abertos.<br/>
+					    <b>Sérgio Serra:</b> Computação semântica em E-Science.
 					</div>
 				    </li>
 				    <li class="accordion">
@@ -282,10 +285,10 @@
 		    <div class="speaker">
 			<div class="speaker-info">
 			    <div class="speaker-photo">
-				<img src="images/speakers/no_pic_w.png" alt="Aline Paes">
+				<img src="images/speakers/aline.jpg" alt="Aline Paes">
 			    </div>								
 			    <div class="speaker-contacts">
-				<!--<a href="#" class="contact pull-left fa fa-linkedin"></a>-->
+				<a href="http://www.ic.uff.br/~alinepaes" class="contact pull-left fa fa-university"></a>
 				<a href="http://br.linkedin.com/pub/aline-paes/41/7a1/9ab" class="contact pull-right fa fa-linkedin"></a>
 			    </div>
 			</div>
