Inclusão dos dados de Marco Casanova

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -231,6 +231,7 @@
 					    <b>Daniel Schwabe:</b> Desenvolvimento de Sistemas Socio-Técnicos Dirigido por Modelos Semânticos.<br/>
 					    <b>Ícaro Medeiros:</b> Linked Data, Big data and User Science @ globo.com.<br/>
 					    <b>Karin Breitman:</b> Linked Data para Dados Abertos.<br/>
+					    <b>Marco Casanova:</b> Web de Dados: Fundamentos, Técnicas e Aplicações.<br/>
 					    <b>Sérgio Serra:</b> Computação semântica em E-Science.
 					</div>
 				    </li>
@@ -456,7 +457,7 @@
 				<img src="images/speakers/no_pic.gif" alt="Marco Casanova">
 			    </div>
 			    <div class="speaker-contacts">
-				<!--<a href="#" class="contact pull-left fa fa-linkedin"></a>-->
+				<a href="http://www.inf.puc-rio.br/~casanova" class="contact pull-left fa fa-university"></a>
 				<a href="https://www.linkedin.com/in/marcoantoniocasanova" class="contact pull-right fa fa-linkedin"></a>
 			    </div>
 			</div>
