Inclusão da palestra do Cícero

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -228,6 +228,7 @@
 					    Esta seção visa a apresentação do trabalho sendo conduzido por diversos grupos de pesquisa na área de Computação Semântica no Rio de Janeiro. Seu objetivo é facilitar a busca por pontos de conexão para futuras colaborações na área.<br/><br/>
 					    <b>Aline Paes: </b> Aprendizado de Modelos Semânticos Expressivos com Programação por Conjuntos de Resposta.<br/>
 					    <b>Christian Aranha:</b> Aprendizado Adaptativo de Estruturas Semânticas.<br/>
+					    <b>Cícero dos Santos:</b> Processamento de Linguagem Natural com Deep Learning: uma revolução iminente.<br/>
 					    <b>Daniel Schwabe:</b> Desenvolvimento de Sistemas Socio-Técnicos Dirigido por Modelos Semânticos.<br/>
 					    <b>Ícaro Medeiros:</b> Linked Data, Big data and User Science @ globo.com.<br/>
 					    <b>Karin Breitman:</b> Linked Data para Dados Abertos.<br/>
