Incluindo informacoes da Ana Maria e modificando informacoes de Alexandre

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -226,7 +226,8 @@
 					</a>
 					<div class="accordion-body" style="display: none;">
 					    Esta seção visa a apresentação do trabalho sendo conduzido por diversos grupos de pesquisa na área de Computação Semântica no Rio de Janeiro. Seu objetivo é facilitar a busca por pontos de conexão para futuras colaborações na área.<br/><br/>
-					    <b>Aline Paes: </b> Aprendizado de Modelos Semânticos Expressivos com Programação por Conjuntos de Resposta.<br/>
+					    <b>Aline Paes:</b> Aprendizado de Modelos Semânticos Expressivos com Programação por Conjuntos de Resposta.<br/>
+					    <b>Ana Maria Moura:</b> Computação semântica: cenários de aplicação em desenvolvimento no LNCC.<br/>
 					    <b>Christian Aranha:</b> Aprendizado Adaptativo de Estruturas Semânticas.<br/>
 					    <b>Cícero dos Santos:</b> Processamento de Linguagem Natural com Deep Learning: uma revolução iminente.<br/>
 					    <b>Daniel Schwabe:</b> Desenvolvimento de Sistemas Socio-Técnicos Dirigido por Modelos Semânticos.<br/>
@@ -305,22 +306,22 @@
 				<img src="images/speakers/alexandre.jpg" alt="Alexandre Rademaker">
 			    </div>
 			    <div class="speaker-contacts">
-				<a href="http://emap.fgv.br/people/alexandre.rademaker.html" class="contact pull-left fa fa-university"></a>
+				<a href="http://researcher.watson.ibm.com/researcher/view.php?person=br-alexrad" class="contact pull-left fa fa-university"></a>
 				<a href="http://br.linkedin.com/pub/alexandre-rademaker/8/a7/73a" class="contact pull-right fa fa-linkedin"></a>
 			    </div>
 			</div>
 			<h3>Alexandre Rademaker</h3>
-			<p>FGV/EMAp e IBM Research</p>
+			<p>IBM Research e FGV/EMAp</p>
 		    </div>
 		</div>
 		<div class="col-md-4 col-sm-6">
 		    <div class="speaker">
 			<div class="speaker-info">
 			    <div class="speaker-photo">
-				<img src="images/speakers/no_pic_w.png" alt="Ana Maria Moura">
+				<img src="images/speakers/ana_maria.jpg" alt="Ana Maria Moura">
 			    </div>
 			    <div class="speaker-contacts">
-				<!--<a href="#" class="contact pull-left fa fa-linkedin"></a>-->
+				<a href="http://lattes.cnpq.br/4044140234487269" class="contact pull-left fa fa-university"></a>
 				<a href="http://br.linkedin.com/pub/ana-maria-moura/11/3a9/626" class="contact pull-right fa fa-linkedin"></a>
 			    </div>
 			</div>
