Inclusão de palestras de André e Bianca

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -228,6 +228,8 @@
 					    Esta seção visa a apresentação do trabalho sendo conduzido por diversos grupos de pesquisa na área de Computação Semântica no Rio de Janeiro. Seu objetivo é facilitar a busca por pontos de conexão para futuras colaborações na área.<br/><br/>
 					    <b>Aline Paes:</b> Aprendizado de Modelos Semânticos Expressivos com Programação por Conjuntos de Resposta.<br/>
 					    <b>Ana Maria Moura:</b> Computação semântica: cenários de aplicação em desenvolvimento no LNCC.<br/>
+					    <b>André Freitas:</b> Talking to your data: Natural Language Interfaces for a schema-less world.<br/>
+					    <b>Bianca Pereira:</b> Compreensão de Linguagem Natural no Insight Centre: Construindo a ponte entre Texto e Base de Dados Semântica.<br/>
 					    <b>Christian Aranha:</b> Aprendizado Adaptativo de Estruturas Semânticas.<br/>
 					    <b>Cícero dos Santos:</b> Processamento de Linguagem Natural com Deep Learning: uma revolução iminente.<br/>
 					    <b>Daniel Schwabe:</b> Desenvolvimento de Sistemas Socio-Técnicos Dirigido por Modelos Semânticos.<br/>
