--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -235,6 +235,7 @@
 					    <b>Daniel Schwabe:</b> Desenvolvimento de Sistemas Socio-Técnicos Dirigido por Modelos Semânticos.<br/>
 					    <b>Ícaro Medeiros:</b> Linked Data, Big data and User Science @ globo.com.<br/>
 					    <b>Karin Breitman:</b> Linked Data para Dados Abertos.<br/>
+					    <b>Kate Revoredo:</b> Adaptando, Aprendendo e Integrando Modelos Semânticos.<br/>
 					    <b>Marco Casanova:</b> Web de Dados: Fundamentos, Técnicas e Aplicações.<br/>
 					    <b>Sérgio Serra:</b> Computação semântica em E-Science.
 					</div>
@@ -443,10 +444,10 @@
 		     <div class="speaker">
 			<div class="speaker-info">
 			    <div class="speaker-photo">
-				<img src="images/speakers/no_pic_w.png" alt="Kate Revoredo">
+				<img src="images/speakers/kate.jpeg" alt="Kate Revoredo">
 			    </div>
 			    <div class="speaker-contacts">
-				<!--<a href="#" class="contact pull-left fa fa-linkedin"></a>-->
+				<a href="http://lattes.cnpq.br/0814717344017544" class="contact pull-left fa fa-university"></a>
 				<a href="http://br.linkedin.com/pub/kate-revoredo/20/52/401?domainCountryName=Brazil&csrfToken=guest_token&domainCountryCode=br" class="contact pull-right fa fa-linkedin"></a>
 			    </div>
 			</div>
